<resources>
    <string name="app_name">Slambook</string>
    <string name="app_version">Version 1.0</string>
    <string name="developer_email">gauravbordoloi@gmonetix.com</string>
    <string name="copyright">Copyright © 2017 Gmonetix. \nAll Right Reserved.</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Welcome slide activity -->
    <string name="slide_1_title">Bored of writing slams in diaries  ?</string>
    <string name="slide_1_desc">Use our SLAMBOOK app to securely send your slams to friends. </string>

    <string name="slide_2_title">Make Friends !</string>
    <string name="slide_2_desc">Make friends online by sending &amp; accepting request .</string>

    <string name="slide_3_title">Send &amp; receive Slams!</string>
    <string name="slide_3_desc">Send &amp; receive slams . Slams containing more than 40 questions .</string>

    <string name="slide_4_title">Chats securely!</string>
    <string name="slide_4_desc">Chat with your friends &amp; ! Let them know how you feel about their slams</string>

    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="pref_group_profile">PROFILE</string>
    <string name="pref_group_notif">NOTIFICATIONS</string>
    <string name="pref_group_others">OTHERS</string>
    <string name="pref_title_name">Your Name</string>
    <string name="pref_title_email">Your Email</string>
    <string name="pref_title_notif">Push Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_copyright">Copyright</string>
    <string name="pref_title_dev_email">Developer Email</string>
    <string name="pref_title_build">Build Version</string>
    <string name="pref_title_term">Term &amp; Policies</string>

    <!-- ads key -->
    <string name="ad_settings_activity">ca-app-pub-9556270719341003/7728427978</string>  ..
    <string name="ad_home_activity">ca-app-pub-9556270719341003/9205161176</string>  ..
    <string name="ad_friend_profile_activity">ca-app-pub-9556270719341003/3158627578</string> ..
    <string name="ad_chats_activity">ca-app-pub-9556270719341003/4635360777</string>
    <string name="ad_received_slam_activity">ca-app-pub-9556270719341003/7588827173</string> ..
    <string name="ad_sent_slam_activity">ca-app-pub-9556270719341003/9065560378</string> ..
    <string name="ad_write_slam_activity">ca-app-pub-9556270719341003/1542293578</string> ..
    <string name="ad_update_slam_activity">ca-app-pub-9556270719341003/3019026776</string> ..


</resources>
